Changed copyright to 'Slice'. Project site launched. Project finished

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <!-- "Footer" -->
     <div class="footer">
-      <p>&copy; Excursion</p>
+      <p>&copy; Slice</p>
     </div>
 </body>
 </html>
